2012-06-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp: Add completion for shell commands.

2012-06-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Each child can have its own border
	size. New binding to change the child border size on the fly.

2012-06-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (process-timers): Call get-internal-real-time
	only once for all times.

2012-06-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (define-toolbar-hooks): Add auto-hide
	clickable toolbar.
	(define-toolbar-hooks): Add auto-hide toolbar (show/hide on mouse
	motion event).

2012-06-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (handle-event): Add an additional hook event
	system to handle events in contrib code.

2012-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Add an optional border size in all
	placement functions.

2012-05-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (clock): Add a clock module.

2012-05-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: begining of toolbar support.

2012-05-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (rotate-root-geometry): Do not use
	rotatef but a simpler algorithm.

2012-05-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Adjust width and height in child and
	root placement to prevent too big child size.

2012-05-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: New root placement possibility.

	* src/clfswm-util.lisp (change-current-root-geometry): New
	function.

2012-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (exchange-root-geometry-with-mouse): New
	function and menu.

2012-05-16  Philippe Brochard  <pbrochard@common-lisp.net>
